--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -39,7 +39,7 @@ android {
         applicationId "io.github.lebrand.flutter_oaid_example"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -56,4 +56,8 @@ android {
 
 flutter {
     source '../..'
+}
+
+dependencies {
+    implementation "com.github.gzu-liyujiang:Android_CN_OAID:4.2.4"
 }
