--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_oaid
-description: A new Flutter plugin project.
+description: A new Flutter plugin to get oaid
 version: 0.0.1
-homepage:
+publish_to: 'none'
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
