--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,7 +14,8 @@ buildscript {
 
 rootProject.allprojects {
     repositories {
-        maven { url 'https://jitpack.io' }
+        maven { url 'https://jitpack.io' }        
+        maven { url 'https://developer.huawei.com/repo/' }
         google()
         mavenCentral()
     }
