--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,7 @@ rootProject.allprojects {
     repositories {
         maven { url 'https://jitpack.io' }        
         maven { url 'https://developer.huawei.com/repo/' }
+        maven { url 'https://developer.hihonor.com/repo/' }
         google()
         mavenCentral()
     }
